--- a/app/src/main/res/layout/list_layout.xml
+++ b/app/src/main/res/layout/list_layout.xml
@@ -1,23 +1,27 @@
-<LinearLayout android:layout_width="match_parent"
+<LinearLayout android:layout_width="200dp"
     android:layout_height="wrap_content"
-    android:orientation="horizontal"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:orientation="vertical"
     xmlns:android="http://schemas.android.com/apk/res/android">
 
     <ImageView
-        android:layout_width="0dp"
-        android:layout_height="80dp"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
         android:id="@+id/movie_image"
+        tools:background="#229"
         android:src="@drawable/movie_foreground"
-        android:layout_weight="1"/>
+        android:layout_weight="4"/>
 
-    <TextView android:layout_width="0dp"
-        android:layout_height="80dp"
+    <TextView android:layout_width="match_parent"
+        android:layout_height="0dp"
         android:id="@+id/movie_name"
         android:background="#ffffff"
-        android:layout_weight="4"
+        android:layout_weight="1"
         android:textColor="#111"
         android:textSize="30dp"
-        android:gravity="left"
+        android:gravity="center"
+        tools:text="movie"
+        tools:background="#991"
 
         xmlns:android="http://schemas.android.com/apk/res/android" />
 </LinearLayout>
