--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,15 +6,15 @@
 
     xmlns:tools="http://schemas.android.com/tools">
 
-<android.support.v7.widget.RecyclerView android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical"
+ <android.support.v7.widget.RecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
+     android:id="@+id/movies_rv"
+     android:layout_width="match_parent"
+     android:layout_height="match_parent"
 
 
+     android:orientation="vertical"
 
-    android:id="@+id/movies_rv"
-
-    xmlns:android="http://schemas.android.com/apk/res/android">
+     tools:listitem="@layout/list_layout">
 
 
  </android.support.v7.widget.RecyclerView>
