--- a/app/src/main/res/layout/list_layout.xml
+++ b/app/src/main/res/layout/list_layout.xml
@@ -9,8 +9,11 @@
         android:layout_height="0dp"
         android:id="@+id/movie_image"
         tools:background="#229"
+        android:layout_margin="8dp"
         android:src="@drawable/movie_foreground"
+
         android:layout_weight="4"/>
+
 
     <TextView android:layout_width="match_parent"
         android:layout_height="0dp"
@@ -18,9 +21,9 @@
         android:background="#ffffff"
         android:layout_weight="1"
         android:textColor="#111"
-        android:textSize="30dp"
+        android:layout_margin="8dp"
+        android:textSize="20dp"
         android:gravity="center"
-        tools:text="movie"
         tools:background="#991"
 
         xmlns:android="http://schemas.android.com/apk/res/android" />
