--- a/app/src/main/res/layout/list_layout.xml
+++ b/app/src/main/res/layout/list_layout.xml
@@ -1,31 +1,31 @@
-<LinearLayout android:layout_width="200dp"
-    android:layout_height="wrap_content"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:orientation="vertical"
-    xmlns:android="http://schemas.android.com/apk/res/android">
+    android:layout_width="200dp"
+    android:layout_height="wrap_content"
+    android:orientation="vertical">
 
     <ImageView
+        android:id="@+id/movie_image"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:id="@+id/movie_image"
-        tools:background="#229"
         android:layout_margin="8dp"
+        android:layout_weight="4"
         android:src="@drawable/movie_foreground"
 
-        android:layout_weight="4"/>
+        tools:background="#229" />
 
 
-    <TextView android:layout_width="match_parent"
-        android:layout_height="0dp"
+    <TextView xmlns:android="http://schemas.android.com/apk/res/android"
         android:id="@+id/movie_name"
-        android:background="#ffffff"
-        android:layout_weight="1"
-        android:textColor="#111"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
         android:layout_margin="8dp"
-        android:textSize="20dp"
+        android:layout_weight="1"
+        android:background="#ffffff"
         android:gravity="center"
-        tools:background="#991"
+        android:textColor="#111"
+        android:textSize="20dp"
 
-        xmlns:android="http://schemas.android.com/apk/res/android" />
+        tools:background="#991" />
 </LinearLayout>
 
