--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -1,17 +1,38 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent"
     >
-    <TextView
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="80dp"
-        android:id="@+id/movie_tv"
-        android:textSize="30dp"
-        android:gravity="center"
-        android:background="#ff00ff"/>
-    <VideoView
-        android:layout_width="match_parent"
-        android:layout_height="300dp" />
+        android:layout_height="match_parent"
+        android:orientation="vertical">
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="80dp"
+            android:id="@+id/movie_tv"
+            android:textSize="30dp"
+            android:gravity="center"
+            android:background="#ff00ff"/>
 
-</LinearLayout>
+        <ImageView
+
+            android:id="@+id/movie_detail_image"
+            android:layout_width="match_parent"
+
+            android:layout_height="396dp" />
+        <RatingBar
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/rating"
+            />
+        <TextView
+            android:layout_width="match_parent"
+            android:id="@+id/description"
+            android:layout_height="wrap_content" />
+
+
+    </LinearLayout>
+
+
+</ScrollView>
