--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -3,17 +3,19 @@
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent"
     >
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical">
+
         <TextView
+            android:id="@+id/movie_tv"
             android:layout_width="match_parent"
             android:layout_height="80dp"
-            android:id="@+id/movie_tv"
-            android:textSize="30dp"
+            android:background="#ff00ff"
             android:gravity="center"
-            android:background="#ff00ff"/>
+            android:textSize="30dp" />
 
         <ImageView
 
@@ -21,14 +23,15 @@
             android:layout_width="match_parent"
 
             android:layout_height="396dp" />
+
         <RatingBar
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
             android:id="@+id/rating"
-            />
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+
         <TextView
-            android:layout_width="match_parent"
             android:id="@+id/description"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content" />
 
 
