--- a/app/src/main/res/layout/list_layout.xml
+++ b/app/src/main/res/layout/list_layout.xml
@@ -20,10 +20,11 @@
         android:layout_height="0dp"
         android:layout_margin="8dp"
         android:layout_weight="1"
+        android:visibility="invisible"
         android:background="#ffffff"
         android:gravity="center"
         android:textColor="#111"
-        android:textSize="20dp"
+        android:textSize="15dp"
 
         tools:background="#991" />
 </LinearLayout>
