--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -25,5 +25,12 @@
 
 
     </android.support.v7.widget.RecyclerView>
+    <android.support.v7.widget.RecyclerView android:id="@+id/favorites_rv"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:visibility="invisible"
+        />
+
+
 </FrameLayout>
 
