--- a/app/src/main/res/menu/main.xml
+++ b/app/src/main/res/menu/main.xml
@@ -1,18 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
-    <item android:title="sort by popularity"
+    <item android:title="@string/sort_by_popularity"
         android:id="@+id/sort_by_popularity"
         app:showAsAction="never"
-        android:orderInCategory="1"></item>
-    <item android:title="sort by top rated"
+        android:orderInCategory="1"/>
+    <item android:title="@string/sort_by_top_rated"
         app:showAsAction="never"
         android:id="@+id/sort_by_rating"
-        android:orderInCategory="2"></item>
+        android:orderInCategory="2"/>
     <item
         android:orderInCategory="0"
-        android:title="Favorites"
+        android:title="@string/favorites_text"
         android:id="@+id/favorite_list_btn"
-        app:showAsAction="ifRoom"></item>
+        app:showAsAction="never"/>
+
+
 
 </menu>
