--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -8,6 +8,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:id="@+id/detail_layout"
         android:orientation="vertical">
 
         <TextView
@@ -19,11 +20,15 @@
             android:textSize="30sp" />
 
         <ImageView
+            android:layout_below="@id/movie_tv"
 
             android:id="@+id/movie_detail_image"
             android:layout_width="match_parent"
 
             android:layout_height="396dp" />
+
+
+
         <TextView
             android:id="@+id/release_date"
             android:textSize="30sp"
@@ -34,7 +39,9 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:id="@+id/layout_rating"
             android:orientation="vertical">
+
 
             <RatingBar
                 android:id="@+id/rating"
@@ -73,7 +80,6 @@
             android:text="@string/watch_trailer"
             android:textSize="20sp"
             android:textColor="@color/colorPrimaryDark"
-
             android:id="@+id/trailer-tv"/>
         <TextView
             android:layout_width="match_parent"
