--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
@@ -17,15 +16,14 @@
             android:layout_height="80dp"
             android:background="#ff00ff"
             android:gravity="center"
-            android:textSize="30sp" />
+            android:textSize="@dimen/titleSize" />
 
         <ImageView
-            android:layout_below="@id/movie_tv"
-
+            android:contentDescription="@string/a_poster_for_the_movie"
             android:id="@+id/movie_detail_image"
             android:layout_width="match_parent"
 
-            android:layout_height="396dp" />
+            android:layout_height="@dimen/image_height" />
 
 
 
@@ -85,7 +83,7 @@
             android:layout_width="match_parent"
             android:id="@+id/reviews_tv"
             android:layout_height="50dp"
-            android:text="View Reviews"
+            android:text="@string/view_reviews"
             android:textSize="20sp"/>
 
 
