adjusting the number of columns in the main layout according to the width of the screen

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,5 +3,6 @@
     <color name="colorPrimary">#0F0F0F</color>
     <color name="colorPrimaryDark">#060606</color>
     <color name="colorAccent">#D81B60</color>
+    <color name="backgroudPoster">#991</color>
 
 </resources>
