--- a/app/src/main/res/layout/list_layout.xml
+++ b/app/src/main/res/layout/list_layout.xml
@@ -1,7 +1,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="200dp"
-    android:background="#991"
+    android:layout_width="@dimen/posterwidth"
+    android:background="@color/backgroudPoster"
 
     android:layout_height="wrap_content"
     android:orientation="vertical">
