--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
@@ -24,6 +25,14 @@
             android:layout_width="match_parent"
 
             android:layout_height="@dimen/image_height" />
+        <ImageView
+            android:layout_width="60dp"
+            android:layout_height="60dp"
+            android:layout_gravity="center"
+            android:id="@+id/favorite_btn"
+            android:src="@drawable/ic_favorite_border_black_24dp"
+
+            />
 
 
 
@@ -67,24 +76,27 @@
             android:id="@+id/description"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
-        <ProgressBar
-            android:layout_width="48dp"
-            android:layout_height="48dp"
-            android:id="@+id/trailer_pb"
-            android:layout_gravity="center"/>
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="50dp"
-            android:text="@string/watch_trailer"
-            android:textSize="20sp"
-            android:textColor="@color/colorPrimaryDark"
-            android:id="@+id/trailer-tv"/>
-        <TextView
+
+        <Button
             android:layout_width="match_parent"
             android:id="@+id/reviews_tv"
             android:layout_height="50dp"
             android:text="@string/view_reviews"
             android:textSize="20sp"/>
+        <ProgressBar
+            android:layout_width="48dp"
+            android:layout_height="48dp"
+            android:layout_gravity="center"
+            android:id="@+id/trailer_pb"/>
+
+        <android.support.v7.widget.RecyclerView
+            android:layout_width="match_parent"
+            android:id="@+id/trailers_rv"
+            android:layout_height="wrap_content"
+
+            />
+
+
 
 
 
