--- a/app/src/main/res/layout/trailers.xml
+++ b/app/src/main/res/layout/trailers.xml
@@ -6,7 +6,7 @@
     >
     <TextView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="70dp"
         android:textSize="30sp"
         android:gravity="center"
         android:id="@+id/trailer_item"
